style.css
* {
  margin: 0;
  padding: 0;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background-color: #171717;
}

.calculator {
  height: 400px;
  width: 300px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: lightgrey;
  padding: 20px;
  box-sizing: border-box;
  gap: 10px;
  border-radius: 10px;
}

.display {
  background-color: black;
  color: white;
  font-size: 40px;
  height: 100px;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  border-radius: 10px;
  padding: 5px;
}

.buttons {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.actions {
  display: flex;
  gap: 10px;
}

#clear,
#total {
  flex: 1;
  height: 30px;
  border-radius: 10px;
}

.container {
  flex: 1;
  display: flex;
  gap: 10px;
}

.operators {
  flex: 1;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  gap: 10px;
}
.operator {
  flex: 1;
  border-radius: 10px;
}

.numbers {
  display: flex;
  flex: 3;
  flex-wrap: wrap;
  gap: 8px;
  justify-content: center;
}

.num {
  width: 25%;
  border-radius: 10px;
}

